Fixes gap between input and buttons.

--- a/sass/_commentForm.scss
+++ b/sass/_commentForm.scss
@@ -1,5 +1,6 @@
 .form-holder {
-	@include flexAllRow;
+	display: flex;
+	align-items: flex-start;
 	justify-content: flex-start;
 	gap: 1rem;
 	margin-bottom: 1rem;
@@ -14,6 +15,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
+		gap: 0.5rem;
 
 		.text {
 			width: 100%;
